# rest_trainings_api

./: .dockerignore  .gitignore  apply_migrations.py  docker-compose-test.yaml  docker-compose-test.yml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  test_db_apply_migrations.py  yoyo.ini
docker/app/: Dockerfile
docker/migrations/: Dockerfile
migrations/: 20241222_add_base_tables.py  20250112_01_ZfOxG-add-trainings-tables.py  20250303_01_qx9M5.py  20250315_01_ssW97-add-payment-table.py  apply_migrations.py
scripts/celery/: celery_run.sh  wait_for_rabbitmq.sh
scripts/docker/: migrate.sh  wait_for_postgres.sh
tests/: clients.py  clients_api_test.py  config_db_test.py  conftest.py  main.py
tests/repositories/: clients.py  config_db_test.py  test_clients.py  test_load.py  test_memberships.py  test_users.py
tests/schemas/: clients.py
trainings_app/: README.md  config.py  main.py  settings.py
trainings_app/auth/: README.md  settings.py
trainings_app/auth/repositories/: jwt_auth.py
trainings_app/auth/routers/: jwt_auth.py
trainings_app/auth/schemas/: jwt_auth.py
trainings_app/auth/utils/: jwt_utils.py
trainings_app/brokers/: consumer.py
trainings_app/check_membership/: add_to_queue.py  celery_app.py  run_beat.py  run_worker.py
trainings_app/custom_loggers/: console_debug.py  main.py  repositories.py  test_db.py  test_db_init.py
trainings_app/db/: connection.py  db_connection.py  general.sql
trainings_app/db/fields/: base.py  clients.py  exercises.py  memberships.py  payments.py  report.py  trainings.py  trainings_exercises.py  users.py
trainings_app/db_redis/: settings.py
trainings_app/exceptions/: exception_handlers.py  exceptions.py  exercises.py  memberships.py  models.py  trainings.py  user.py
trainings_app/logging/: config.py  main.py  repositories.py
trainings_app/reports/: add_to_queue.py  celery_app.py  repositories.py  routers.py  run_beat.py  run_worker.py  schemas.py  settings.py
trainings_app/repositories/: base.py  client_repository.py  clients.py  exercises.py  memberships.py  payments.py  trainings.py  trainings_exercises.py  user_repository.py  users.py
trainings_app/routers/: clients.py  exercises.py  memberships.py  payments.py  r_users.py  r_сlients.py  root.py  trainings.py  trainings_exercises.py  users.py  сlients.py
trainings_app/schemas/: clients.py  clients_training_plans.py  exercises.py  memberships.py  payments.py  s_clients.py  s_clients_training_plans.py  s_exercises.py  s_memberships.py  s_training_plan_trainings.py  s_training_plans.py  s_trainings.py  s_trainings_exercises.py  s_users.py  training_plan_trainings.py  training_plans.py  trainings.py  trainings_exercises.py  users.py
trainings_app/test_db/: test_db_config.py
trainings_app/tg_bot/: bot.py  temp_storage.py
trainings_app/tg_bot/routers/: tg_bot.py
trainings_app/tg_bot/schemas/: tg_bot.py
trainings_app/utils/: password_hashing.py
