[tool.poetry]
name = "rest_trainings_api"
version = "0.1.0"
description = ""
authors = ["AlexandrSmolyachkovGH <alexandr.smolyachkov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
yoyo-migrations = "^9.0.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
passlib = "^1.7.4"
bcrypt = "3.2.0"
pytest = "^8.3.4"
httpx = "^0.28.1"
pytest-order = "^1.3.0"
pytest-ordering = "^0.6"
pytest-asyncio = "^0.25.3"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
python-multipart = "^0.0.20"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
